# geomat

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  Pipfile  README.md  SMCC_Masin.py  main.cpp  pyproject.toml  setup.py  test.py  test_umat  test_umat.f90  umat.cpp  umat.f90  umat_cpp_interface.hpp
.cache/clangd/index/: AlignedBox.h.C67D56019FFA6E77.idx  AmbiVector.h.E3A4B41B024DFB19.idx  Amd.h.AD57C213B13D7E2A.idx  AngleAxis.h.8680BC783F34642C.idx  ArithmeticSequence.h.AC8704BF74BAE14A.idx  Array.h.F7A7217C18E8EB29.idx  ArrayBase.h.B6F20FB60BF05D2B.idx  ArrayCwiseBinaryOps.h.E6BAE118E173D504.idx  ArrayCwiseUnaryOps.h.D9A7521C2915F120.idx  ArrayWrapper.h.5BA6EB134375405E.idx  Assign.h.3F0E870D222E10A3.idx  AssignEvaluator.h.199BA527138ECC20.idx  AssignmentFunctors.h.1BA049ED9961A305.idx  BDCSVD.h.52A2A83CD49E5EF6.idx  BFloat16.h.EA7AF47CCA584A0E.idx  BVAlgorithms.h.F684F86679E26268.idx  BVH.2BD6512928086CF7.idx  BVH_Example.cpp.BCD1DA5DE326159B.idx  BandMatrix.h.3D52799551373D63.idx  BasicPreconditioners.h.24A72D378D5A09FF.idx  BesselFunctionsArrayAPI.h.8A51DC778737E08B.idx  BesselFunctionsBFloat16.h.1D4DF26E19A76D67.idx  BesselFunctionsFunctors.h.998DB784C9EDF366.idx  BesselFunctionsHalf.h.CFC23919AABC8C65.idx  BesselFunctionsImpl.h.C924F0C00836E168.idx  BesselFunctionsPacketMath.h.8136781491377258.idx  BiCGSTAB.h.A7D446A8BE82F845.idx  BiCGSTABL.h.3CF54DAC5217EB87.idx  BinaryFunctors.h.C3C247945D47E3BC.idx  BlasUtil.h.201A1A460CEA8126.idx  Block.h.B1AA920AFD35B6AA.idx  BlockHouseholder.h.30F640A1224A6BFA.idx  BlockMethods.h.109BD9DC5F467E59.idx  BooleanRedux.h.4A7CA5A555F776B7.idx  Checks.cpp.D41527560AE20278.idx  Checks.hpp.BE982E8F276CB461.idx  Cholesky.5796B3787E7478F5.idx  ColPivHouseholderQR.h.5D169F43747A6D8C.idx  ColorConsoleAppender.h.777FDC2F5558EC1F.idx  CommaInitializer.h.4195CB913A666ACA.idx  (+442 more)
.github/workflows/: build_wheels.yml
Model/: CMakeLists.txt
Model/src/: Model.cpp  Model.hpp
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  requirements.txt
docs/source/: Doxyfile.in  api.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/api/: index.rst
models/SMCC/: CMakeLists.txt
models/SMCC/src/: SMCC.hpp
src/: CMakeLists.txt  PythonAPI.cpp  main.cpp
src/Model/: CMakeLists.txt
src/Model/src/: Model.cpp  Model.hpp
src/abstract/: CMakeLists.txt
src/abstract/Elastic/: CMakeLists.txt
src/abstract/Elastic/src/: Elastic.cpp  Elastic.hpp
src/abstract/Elastoplastic/: CMakeLists.txt
src/abstract/Elastoplastic/src/: Elastoplastic.cpp  Elastoplastic.hpp
src/abstract/Model/: CMakeLists.txt
src/abstract/Model/src/: Model.cpp  Model.hpp
src/abstract/include/: abstract.hpp
src/geomat/: __init__.py  geomat.cpp  models.cpp  pyabstract.cpp  pymodels.cpp  pyutilities.cpp
src/models/: CMakeLists.txt
src/models/C2MC/: CMakeLists.txt
src/models/C2MC/src/: C2MC.cpp  C2MC.hpp
src/models/EMC/: CMakeLists.txt
src/models/EMC/src/: EMC.cpp  EMC.hpp
src/models/LinearElastic/: CMakeLists.txt
src/models/LinearElastic/src/: LinearElastic.cpp  LinearElastic.hpp  LinearElastic_Definition.hpp
src/models/MCC/: CMakeLists.txt
src/models/MCC/src/: MCC.cpp  MCC.hpp  MCC_Definition.hpp  MCC_Model.cpp
src/models/SMCC/: CMakeLists.txt
src/models/SMCC/src/: SMCC.cpp  SMCC.hpp  SMCC_Definition.hpp
src/models/include/: models.hpp
src/umat/: CMakeLists.txt
src/umat/src/: abaqus_fortran_cpp_interface.f90  abaqus_fortran_cpp_interface.mod  compile_library.py  test_umat.cpp  test_umat.f90  umat.cpp  umat.hpp  umat_cpp_interface.cpp  umat_cpp_interface.hpp
src/utilities/: CMakeLists.txt
src/utilities/Checks/: CMakeLists.txt
src/utilities/Checks/src/: Checks.cpp  Checks.hpp
src/utilities/Elastic/: CMakeLists.txt
src/utilities/Elastic/src/: Elastic.cpp  Elastic.hpp
src/utilities/Elastoplastic/src/: Elastoplastic.cpp  Elastoplastic.hpp
src/utilities/Integrator/: CMakeLists.txt
src/utilities/Integrator/Explicit/: CMakeLists.txt
src/utilities/Integrator/Explicit/ModifiedEuler/: CMakeLists.txt
src/utilities/Integrator/Explicit/ModifiedEuler/src/: ModifiedEuler.cpp  ModifiedEuler.hpp
src/utilities/Integrator/Explicit/RKDP/: CMakeLists.txt
src/utilities/Integrator/Explicit/RKDP/src/: RKDP.cpp  RKDP.hpp
src/utilities/Integrator/Explicit/src/: Explicit.cpp  Explicit.hpp
src/utilities/Integrator/src/: Integrator.cpp  Integrator.hpp
src/utilities/Integrator/src/Explicit/ModifiedEuler/src/: ModifiedEuler.cpp  ModifiedEuler.hpp
src/utilities/Integrator/src/Explicit/src/: Explicit.cpp
src/utilities/Integrators/: CMakeLists.txt
src/utilities/Integrators/Sloan/: CMakeLists.txt
src/utilities/Integrators/Sloan/src/: Sloan.cpp  Sloan.hpp
src/utilities/Integrators/src/: Explicit.hpp  Integrators.hpp
src/utilities/Intersection/: CMakeLists.txt
src/utilities/Intersection/src/: Intersection.cpp  Intersection.hpp
src/utilities/Logging/: CMakeLists.txt
src/utilities/Logging/src/: Logging.cpp  Logging.hpp
src/utilities/Math/: CMakeLists.txt
src/utilities/Math/src/: Math.cpp  Math.hpp
src/utilities/Tensor/: CMakeLists.txt
src/utilities/Tensor/src/: Tensor.cpp  Tensor.hpp
src/utilities/Types/: CMakeLists.txt
src/utilities/Types/src/: Types.cpp  Types.hpp
src/utilities/include/: utilities.hpp
tests/: Model.cpp  tests.cpp  umat_integration.cpp  umat_integration.f90
umat/: CMakeLists.txt
umat/src/: umat.cpp  umat.hpp
utilities/: CMakeLists.txt
utilities/src/: utilities.cpp  utilities.hpp
