[build-system]
requires = [
    "setuptools",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja",
    "sphinx",
    "breathe"
]
build-backend = "setuptools.build_meta"

[project]
name = "geomat"
version = "0.0.3"
authors = [
  { name="Sam Stanier", email="sas229@cam.ac.uk" },
  { name="Abhishek Ghosh-Dastider", email="ag2314@cam.ac.uk" },
]
description = "Geotechnical constitutive model library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: Fortran",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "numpy==1.23.3",
    "matplotlib==3.6.3",
]

[project.urls]
"Homepage" = "https://github.com/sas229/geomat"
"Bug Tracker" = "https://github.com/sas229/geomat/issues"
