[build-system]
requires = [
    "scikit-build-core",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "geomat"
version = "0.0.3"
authors = [
  { name="Sam Stanier", email="sas229@cam.ac.uk" },
  { name="Abhishek Ghosh-Dastider", email="ag2314@cam.ac.uk" },
]
description = "Geotechnical constitutive model library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: Fortran",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "sphinxcontrib-bibtex",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "scikit-build",
    "sphinx-rtd-theme",
    "sphinx",
    "build",
    "twine"
]

[tool.scikit-build]
minimum-version = "0.5"

[tool.scikit-build.wheel]
packages = ["geomat"]
cmake = true

[tool.scikit-build.sdist]
include = [
    "test.py"
]

[project.urls]
"Homepage" = "https://github.com/sas229/geomat"
"Bug Tracker" = "https://github.com/sas229/geomat/issues"
